--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.gravitygamesinteractive.pixelsdungeon"
-	android:versionCode="59"
-	android:versionName="1.7.1c"
+	android:versionCode="1"
+	android:versionName="0.0.1a"
 	android:installLocation="auto">
 
     <uses-permission android:name="android.permission.VIBRATE"/>
